--- a/settings.org
+++ b/settings.org
@@ -85,6 +85,12 @@
      (global-set-key (kbd "C-c c") 'org-capture)
 
    #+end_src 
+** Keybinds to start applications
+   #+begin_src emacs-lisp
+
+     (global-set-key (kbd "M-a") 'shell-command)
+
+     #+end_src
 
 * Outplacing to Custom.el
   #+begin_src emacs-lisp
@@ -102,3 +108,13 @@
      (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))		
    #+end_src 
+
+  
+* EXWM
+** Base Keybinds
+   #+begin_src emacs-lisp
+     (require 'exwm)
+     (require 'exwm-config)
+     (exwm-config-default)
+
+   #+end_src
